test/correct/Reexport3.hs
module Reexport3(y) where

y :: Int
y = 43

