test/typeerrors/Heuristics/FBHasTooMany3.hs
module FBHasTooMany3 where

max3 :: Int -> Int -> Int
max3 x y z = x `max` (y `max` z) 
